Fixed bug where Nav component overlapped with content

--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,6 @@ body {
   background-color: #fffafa;
 }
 
-a {
-  color: black;
-  text-decoration: none;
-}
-
 .white-bg {
   background-color: white;
 
@@ -40,6 +35,11 @@ table {
 
 .red {
   color: #f44336;
+}
+
+.left-align {
+  text-align: left;
+  padding: 0 5%;
 }
 
 footer {
